--- a/views/categories.html
+++ b/views/categories.html
@@ -5,10 +5,10 @@
     <br/><br/>
 
     <div class="list-group" >
-        <a ng-repeat="category in categories" href="/RecordShop/index.html#/categories/{{category.name}}"
+        <a ng-repeat="category in categories" href="/RecordShop/index.html#/categories/{{category}}"
            class="list-group-item">
             <!--Name + Image -->
-            {{category.name}}
+            {{category}}
         </a>
     </div>
 
