--- a/views/category.html
+++ b/views/category.html
@@ -1,2 +1,23 @@
 <!-- TODO: Implement -->
-<div>BASKET</div>
+<div class="container">
+    <h2>{{category}}</h2>
+
+    <br/><br/>
+
+    <div class="list-group" >
+        <a ng-repeat="item in items" href="/RecordShop/index.html#/items/{{item.id}}"
+           class="list-group-item">
+            <!--Name + Image -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="{{item.img}}" />
+                    </div>
+                    <div class="col-md-3">
+                        {{item.name}}
+                    </div>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
